# data-science-agent

./: .gitignore  09-determine_and_dowload_datasets.ipynb  README.md  agent.py  main.py  prompts.py  pyproject.toml  rq_continous.py  todos.md
.ipynb_checkpoints/: 09-determine_and_dowload_datasets-checkpoint.ipynb
data/: pegel.csv  pegel.rdf
dtos/: description.py  metadata.py
dtos/base/: description_base.py  metadata_base.py
dtos/base/responses/: code_base.py  column_base.py  judge_base.py  judge_verdict_base.py  regeneration_base.py  summary_base.py
dtos/de/: description.py
dtos/de/responses/: code.py  column.py  judge.py  judge_verdict.py  regeneration.py  summary.py
dtos/en/: description.py  metadata.py
dtos/en/responses/: code.py  column.py  regeneration.py  summary.py
dtos/responses/: column.py  summary.py
notebooks/: conditional_graph.ipynb  hello_world.ipynb  multiple_inputs_graph.ipynb
results/rq_1/: results.ipynb
results/rq_2/: results.ipynb
results/rq_3/: results.ipynb
results/rq_4/: results.ipynb
results/rq_5/: results.ipynb  study_data.csv
src/data_science_agent/: __init__.py  agent.py  prompts.py  rq_continous.py  test.py  test_parallel.py
src/data_science_agent/dtos/: __init__.py
src/data_science_agent/graph/: __init__.py  agent_state.py  builder.py
src/data_science_agent/language/: __init__.py  dto_loader.py  loader.py  prompt.py
study/: Data-Science-Agent.html
study/Data-Science-Agent_files/: dependencies.js  lightbox.js  semantic.min.css  semantic.min.js  survey.bundle.js  theme.thV5.css
(+1685 files in other folders)
