[project]
name = "data-science-agent"
version = "0.1.0"
description = "Agent that uses LLMs and data science tools to explore and visualize generic tabular datasets."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "assert-llm-tools>=0.8.0",
    "basemap>=2.0.0",
    "bert-score>=0.3.13",
    "chardet>=5.2.0",
    "geopandas>=1.1.1",
    "langchain>=1.0.5",
    "langchain-experimental>=0.4.0",
    "langchain-openai>=1.0.2",
    "matplotlib>=3.10.7",
    "nltk>=3.9.2",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "plotly[express]>=6.4.0",
    "python-dotenv>=1.2.1",
    "rdflib>=7.4.0",
    "rouge-score>=0.1.2",
    "seaborn>=0.13.2",
    "tabulate>=0.9.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
